# tftk

./: .gitignore  Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: gh-pages.yml
src/tf_format/: conv_impl.rs.html  lib.rs.html  rotation.rs.html  transform.rs.html  transform_set.rs.html  unit.rs.html
src/tf_format/transform_set/: error.rs.html  mutual_set.rs.html  serialized.rs.html  topo_sort.rs.html  tset.rs.html
tf-format/: Cargo.toml  README.md
tf-format/example_config/: rot_axis_angle.json  rot_euler.json  rot_matrix.json  rot_quaternion.json  rot_rodrigues.json  tf_euler.json  tfset1.json
tf-format/src/: conv_impl.rs  lib.rs  rotation.rs  transform.rs  transform_set.rs  unit.rs
tf-format/src/transform_set/: error.rs  mutual_set.rs  serialized.rs  topo_sort.rs  transform_set.rs  tset.rs
tf-format/tests/: inverse.rs  serde.rs  transform_set.rs
tf_format/: all.html  enum.EulerAxis.html  enum.Rotation.html  index.html  sidebar-items.js  struct.Angle.html  struct.AxisAngle.html  struct.CoordTransform.html  struct.Euler.html  struct.EulerAxisOrder.html  struct.MaybeTransform.html  struct.Quaternion.html  struct.Rodrigues.html  struct.RotationMatrix.html  struct.Transform.html  struct.TransformSet.html  struct.Translation.html  type.Length.html
tf_format/rotation/: enum.EulerAxis.html  enum.Rotation.html  struct.AxisAngle.html  struct.Euler.html  struct.EulerAxisOrder.html  struct.Quaternion.html  struct.Rodrigues.html  struct.RotationMatrix.html
tf_format/transform/: struct.MaybeTransform.html  struct.Transform.html  struct.Translation.html
tf_format/transform_set/: struct.CoordTransform.html
tf_format/transform_set/tset/: struct.TransformSet.html
tf_format/unit/: struct.Angle.html  type.Length.html
tfpy/: Cargo.toml  README.md
tfpy/src/: lib.rs  serde.rs  types.rs
tftk/: Cargo.toml  README.md
tftk/src/: cli.rs  compose.rs  convert.rs  main.rs  utils.rs
trait.impl/alloc/string/: trait.ToString.js
trait.impl/approx/abs_diff_eq/: trait.AbsDiffEq.js
(+23 files in other folders)
