[package]
name = "tfpy"
version = "0.1.0"
edition = "2021"

[lib]
name = "tfpy"
crate-type = ["cdylib"]

[dependencies]
json5 = "0.4.1"
nalgebra = "0.32.3"
ndarray = "0.15.6"
noisy_float = "0.2.0"
num = "0.4.1"
numpy = "0.20.0"
pyo3 = { version = "0.20.2", features = ["extension-module"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
tf-format = { version = "0.1.0", path = "../tf-format" }
