[package]
name = "tftk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
clap = { version = "4.4.18", features = ["derive"] }
json5 = "0.4.1"
noisy_float = "0.2.0"
num = "0.4.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
tf-format = { version = "0.1.0", path = "../tf-format" }
